--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
 		"jQuery": true,
 		"$": true,
 		"Promise": true,
-		"QUnit": true
+		"QUnit": true,
+		"sinon": true
 	},
 	"rules": {
 		"comma-dangle": [2, "never"],
