--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "grunt-contrib-copy": "~1.0.0",
         "grunt-contrib-jshint": "~1.1.0",
         "grunt-eslint": "~19.0.0",
+        "grunt-openui5": "^0.12.0",
         "grunt-sonar-runner": "~2.4.8",
         "grunt-trimtrailingspaces": "~2.3.1",
         "jshint-stylish": "~2.2.1",
