--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "install-bower": "bower install",
         "grunt-jenkins": "grunt jenkins",
         "grunt-sonar": "grunt sonar",
+		"grunt-login": "grunt scp-login",
+        "grunt-build": "grunt build",
         "unit-test": "./node_modules/karma/bin/karma start karma-unit.conf.js",
         "integration-test": "./node_modules/karma/bin/karma start karma-integration.conf.js"
     },
@@ -37,9 +39,11 @@
     "dependencies": {
         "archiver": "^2.1.1",
         "cheerio": "^1.0.0-rc.2",
+        "iconv-lite": "^0.4.21",
         "npm": "^5.8.0",
         "request-debug": "^0.2.0",
         "request-promise-native": "^1.0.5",
+        "tough-cookie": "^2.3.4",
         "tough-cookie-filestore": "0.0.1"
     }
 }
