Remove iconv-lite from dependencies and fix grunt task for deployment
Looks like you don't need to convert the buffer which is read from the zip file before uploading it.
This means iconv-lite is also not necessary anymore.
The deployment task tried to deploy the app directly without building it first. Now it will build it first and then deploy it.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "grunt-sonar": "grunt sonar",
 		"grunt-login": "grunt scp-login",
         "grunt-build": "grunt build",
-		"grunt-deploy": "grunt scp-deploy",
+		"grunt-deploy": "grunt deploy",
         "unit-test": "./node_modules/karma/bin/karma start karma-unit.conf.js",
         "integration-test": "./node_modules/karma/bin/karma start karma-integration.conf.js"
     },
@@ -40,7 +40,6 @@
     "dependencies": {
         "archiver": "^2.1.1",
         "cheerio": "^1.0.0-rc.2",
-        "iconv-lite": "^0.4.21",
         "npm": "^5.8.0",
         "request-debug": "^0.2.0",
         "request-promise-native": "^1.0.5",
